# snippets_llvm

./: .gitignore  CMakeLists.txt  cmake.sh
cmake/: FindLlvm.cmake  LLVMTools.cmake
include/: Common.hh  DbgInfo.hh  FnUtils.hh  IRUtils.hh  LLDump.hh  LLUtils.hh  Logging.hh  Utilities.hh  Version.hh.in
lib/: CMakeLists.txt
lib/Templates/: FLPass.cc  InstVisit.cc  LPass.cc  MLPass.cc
lib/mybase/: CMakeLists.txt  Common.cc  DbgInfo.cc.old  LLDump.cc  LLUtils.cc  LLVMUtils.cc  Logging.cc  Utilities.cc
lib/snippets/: AAPass.cc  AddMTrace.cc  CMakeLists.txt  CountBB.cc  CountExecBB.cc  CountLI.cc  DumpCFGPath.cc  DumpConsts.cc  DumpUseDef.cc  LocalOpts.cc  LoopBasic.cc  MyCG.cc  POSIXMain.cc  PrintCFGPath.cc  PrintDT.cc  PrintMD.cc.old  TestCG.cc  TestFnTy.cc  TestGEP.cc  TestGlobalAlias.cc  TestGlobalValue.cc  TestNoAA.cc  TestOF.cc  TestTI.cc  TestUser.cc  TransAddMTrace.cc  TransConstExpr.cc  TransPrepareFunc.cc  Utilities.cc  Utilities.hh  t_HashDCE.cc
lib/snippets/dataflow/: DF.hh  DF_Liveness.cc  DF_reach.cc
lib/templates/: FLPass.cc  InstVisit.cc  LPass.cc  MLPass.cc
res/FLOW/: run.py
res/analysis_AA/: restrict.c
res/analysis_loop/: loop.c
res/cfe/clang-static/: array_access.c  in-loop.c  supress-npe.c
res/cfe/file/: file_closed.c
res/def_use/: multi_use.c  ud.c
res/gep/: arrary.c
res/llvm_intrinsics/: math.c
res/llvm_type/: fwd_decl.c  pointerTy.c
res/multi_ret/: simple.c
res/passes/: loop-unroll.c  loop.c  loop_trip_counts.c
res/scev/: foo.c  trip_count.c
res/uninit/: init.c
test/FLOW/: f1.dot
test/analysis_AA/: alias.c  alias_arr.c  malloc.c  strict_alias.c
test/analysis_LV/: test.c
test/asm/: inline_asm2.c
test/cfe/: pragma.c  violate.c
test/cfe/clang-static/: assign_loop.c  noreturn.c  stream.c  vfork.c
test/def_use/: gcd.c
test/divByZero/: test.c
test/fmtStr/: test.c
test/fwd/: fwd_sc.c
test/gold_linker/: a.c  b.c
test/gv/: simple.c
test/passes/: loop-rotate.c  loop_nest.c  loop_nest2.c  reassociate.c  run.py
test/simple/: calc.c  main.c
test/ssa/: ssa2.c
test/switch/: non-default.c
test/union/: union.c
tests/FLOW/: f2.dot
tests/analysis_AA/: tbaa.c
tests/analysis_RD/: rd.c
tests/asm/: inline_asm.c
tests/cfe/clang-static/: bof.c  memory.c  prng.c  stack_leak.c
tests/cfe/file/: doubleFClosed.c
tests/gep/: struct.c  struct_fn.c
tests/if/: test1.c  test2.c
tests/inline/: c99_inline.c
tests/memoryMan/: mem_opt.c
tests/passes/: loop-deletion.c
tests/ref_pointer/: ref_pointer.cc
tests/select/: select.c
tests/simple/: Makefile
tests/ssa/: ssa1.c  ssa3.c
tests/ssa/phi/: simple.c
tests/switch/: default.c
tools/: CMakeLists.txt
tools/DS/: CMakeLists.txt  DS.cc
tools/bb_topsort/: CMakeLists.txt  bb_toposort_sccs.cc
tools/dump/: CMakeLists.txt  Dump.cc
tools/hello_ir/: CMakeLists.txt  hello_ir.cc
tools/intrinsics/: CMakeLists.txt  main.cc
tools/klee/: CMakeLists.txt  main.cc
tools/misc/: CMakeLists.txt  Misc.cc  Person.hh  Shape.hh
tools/rtti/: CMakeLists.txt  Shape.cc  Shape.hh
tools/simple/: CMakeLists.txt  simple.cc
tools/toy/: CMakeLists.txt  codegen.cc  codegen.h  corefn.cc  main.cc  node.h  parser.y  tokens.l
tools/yaml/: CMakeLists.txt  yaml.cc
