PROJECT(snippets)

add_llvm_loadable_module(countbb CountExecBB.cc)
target_link_libraries(countbb mybase)
add_llvm_loadable_module(cfgpath DumpCFGPath.cc)
add_llvm_loadable_module(posixmain POSIXMain.cc)
target_link_libraries(posixmain mybase)
add_llvm_loadable_module(countli CountLI.cc)
target_link_libraries(countli mybase)
add_llvm_loadable_module(dumpconsts DumpConsts.cc)
target_link_libraries(dumpconsts mybase)
